--- a/src/WeatherWidget.css
+++ b/src/WeatherWidget.css
@@ -60,17 +60,18 @@
 .weather-station-main.default .weather-widget-solo .weahter-widget-solo-image {
     position: absolute;
     top: 50%;
-    left: 0px;
-    transform: translate(-0%, -45%);
+    left: 20%;
+    transform: translate(-50%, -45%);
 }
 
 .weather-station-main.default .weather-widget-solo .weahter-widget-solo-text {
     position: absolute;
     top: 50%;
     left: 65%;
-    font-size:calc(12px + 100px);
     color: rgb(37, 37, 37);
     transform: translate(-50%, -50%);
+    width: 60%;
+    text-align: center;
 }
 
 .weather-station-main.default .weather-widget-small.margin-right {
